# test_rtic_0.6

./: .gitignore  Cargo.toml  Embed.toml  build.rs  memory.x
.cargo/: config
src/: main.rs
