[package]
authors = ["Emil Fresk <emil@widefind.se>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
name = "app"
version = "0.1.0"

[dependencies]
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
# panic-reset = { version = "*" }
cortex-m = "0.6.0"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
cortex-m-rtic = "0.6.0-alpha.2"
dwt-systick-monotonic = "0.1.0-alpha.1"

[dependencies.stm32l4xx-hal]
git = "https://github.com/stm32-rs/stm32l4xx-hal"
branch = "rtic_0.6_monotonic"
features = ["stm32l4x2", "rt"]


# this lets you use `cargo fix`!
[[bin]]
name                    = "app"
test                    = false
bench                   = false

[profile.dev]
debug                   = true
opt-level               = 1
#force-frame-pointers    = true

[profile.release]
incremental             = false # disable incremental build to allow lto on nightly
codegen-units           = 1     # better optimizations
debug                   = true  # symbols are nice and they don't increase the size on Flash
lto                     = true  # better optimizations
opt-level               = "s"
